Реализован функционал сбора контакта с пользователя